--- a/fixtures/{sample_module}/src/main/res/values/strings.xml.erb
+++ b/fixtures/{sample_module}/src/main/res/values/strings.xml.erb
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name"><%= sample_module %></string>
+    <string name="app_name"><%= project_name %></string>
 </resources>
