Use gradle.properties

--- a/fixtures/{sample_module}/build.gradle.erb
+++ b/fixtures/{sample_module}/build.gradle.erb
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion compile_sdk_version as int
+    buildToolsVersion build_tools_version
     defaultConfig {
         applicationId "<%= sample_package_name %>"
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
         versionCode 1
         versionName "1.0"
         jackOptions {
@@ -20,6 +20,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile "com.android.support:appcompat-v7:$support_lib_version"
     compile project(':<%= library_module%>')
 }
