--- a/fixtures/gradle.properties.erb
+++ b/fixtures/gradle.properties.erb
@@ -1,8 +1,8 @@
 # SDK versions
 compile_sdk_version=25
 build_tools_version=25.0.2
-min_sdk_version=15
-target_sdk_version=25
+min_sdk_version=<%= min_sdk %>
+target_sdk_version=<%= target_sdk %>
 # Library versions
 support_lib_version=25.3.1
 # Build options
