--- a/fixtures/{library_module}/build.gradle.erb
+++ b/fixtures/{library_module}/build.gradle.erb
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
+<%- if library_options.include?('android-maven-gradle-plugin') -%>
 apply plugin: 'com.github.dcendents.android-maven'
+<%- end -%>
 
 android {
     compileSdkVersion compile_sdk_version as int
